[package]
name = "simple-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4"
failure = "0.1"
env_logger = "0.9"
log = "0.4"
signal-hook = "0.3"
nix = "0.23"
clap = { version = "3.0", features = ["cargo"] }
