[package]
name = "tokio-cbor-serde-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_cbor = { version = "0.11" }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["json", "cbor", "bincode"] }
serde = { version = "1", features = ["derive"] }
failure = "0.1"
